# serial_port

./: CMakeLists.txt  vcpkg.json
cmake/: install.cmake  package-config.cmake.in  serial-port-config.cmake.in  serial_port_config.cmake.in  serial_port_install.cmake
include/serial_port/: serial_port.h  serial_port_info.h
